--- a/public/css/admins.css
+++ b/public/css/admins.css
@@ -654,6 +654,30 @@ section{
    text-align: center; /* Căn giữa nội dung trong sản phẩm */
 }
 
+.product-item .details {
+   position: absolute;
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   background: rgba(0, 0, 0, 0.8);
+   color: #fff;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   text-align: center;
+   opacity: 0;
+   visibility: hidden;
+   transition: opacity 0.3s ease, visibility 0.3s ease;
+   padding: 10px;
+   border-radius: 5px;
+}
+
+.product-item:hover .details {
+   opacity: 1;
+   visibility: visible;
+}
+
 .product-item img {
    width: 100%;
    height: 200px; /* Đặt chiều cao cố định để đồng nhất kích thước hình ảnh */
